Mon Feb 11 18:18:09 2002  Tim Janik  <timj@gtk.org>

	* bsesimpleresonancefilter.[hc]: quick and simple resonance filter,
	needs property tweaking still.

	* bsegenosc.c (bse_gen_osc_class_init): provide logarithmic parameters
	for the frequency scale.

	* bsesimpleosc.c (bse_simple_osc_class_init): same here.

	* bseiirfilter.c (bse_iir_filter_class_init): provide log scale params
	for scales here as well.

Wed Feb  6 17:30:53 2002  Tim Janik  <timj@gtk.org>

	* bsesequencer.[hc]: provide per-note sync signal.

	* bsesimpleadsr*.[hc]: fix ranges and gate input handling.

Wed Feb  6 04:54:16 2002  Tim Janik  <timj@gtk.org>

	* bsesequencer.c: specify timings as floats, so more
	fine grained adjustments are possible.

Wed Feb  6 04:41:09 2002  Tim Janik  <timj@gtk.org>

	* bseiirfilter.[hc]: new IIR filter module.
	for some odd reaon, band pass and stop filters aren't
	currently working.

Tue Feb  5 04:38:54 2002  Tim Janik  <timj@gtk.org>

	* bsesequencer.[hc]: new mini sequencer.

Fri Feb  1 02:16:02 2002  Tim Janik  <timj@gtk.org>

	* bsesimpleosc.c:
	* bsegenosc.c: use bse_source_update_omodules() now as the
	variant for imodules vanished.

Tue Jan 29 15:17:43 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper: set consumership.

	* removed bseconstant.[hc] as this is in BSE now.

Thu Jan 24 11:03:49 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.c (bse_snooper_context_create): get rid of hard coded
	number of istreams.

Thu Jan 24 01:38:49 2002  Tim Janik  <timj@gtk.org>

	* *.c: fix categories so /Modules/ is used instead of /Source/.

	* bsewaveosc.c: make n_octaves stepping more fine grained.
	fix description.

Tue Jan 15 17:38:57 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.[hc]: deal with multiple incarnations by letting
	the user specify a context id which identifies the context to
	snoop on.

Tue Jan 15 17:37:14 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc*.[hc]: stripped GslModule calculation code,