@@ -1,3 +1,10 @@
+Sun Mar 10 10:05:41 2002  Tim Janik  <timj@gtk.org>
+
+	* fix BswIcon usage due to changes in BSW/BSE.
+
+	* bsewaveosc.[ch]: support BseEditableSample. export procedure
+	and signal to notify about current PCM playing position on request.
+
 Mon Feb 11 18:18:09 2002  Tim Janik  <timj@gtk.org>
 
 	* bsesimpleresonancefilter.[hc]: quick and simple resonance filter,
